@@ -97,6 +97,9 @@ Version CVS HEAD (?)
   * Automatically switch the sampler's (audible) instrument whenever another
     instrument was selected in gigedit (this default behavior can be switched
     off in the settings menu of gigedit).
+  * Dimension Region Editor: Show coarse sample format info (audio channels,
+    bit depth, sample rate) and unique sample ID (since the gig format allows
+    different samples to have the same name).
 
 Version 0.2.0 (2009-07-31)
 
